tests/baselines/reference/scannerNumericLiteral9.errors.txt
==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral9.ts (2 errors) ====
    009
    ~~
!!! error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.
      ~
!!! error TS1005: ';' expected.